plugins {
    id 'java'
    id 'application'
}

group = 'ch.school.aufgaben'
version = '1.0.0'
java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

repositories { mavenCentral() }

dependencies {
    // zero external deps (100% stdlib)
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

application {
    mainClass = 'ch.school.aufgaben.Main'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.test {
    useJUnitPlatform()
}
